Updated the Branch in main

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -3,8 +3,8 @@ on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
   push:
-    branches:
-      - master
+    branches-ignore:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
