--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -1,30 +1,34 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# GitHub recommends pinning actions to a commit SHA.
-# To get a newer version, you will need to update the SHA.
-# You can also reference a tag or branch, but the action may change without warning.
-
-name: Java CI
-
-on: [push]
-
+name: Jbake-WorkFlow
+on:
+  # Trigger the workflow on push or pull request,
+  # but only for the main branch
+  push:
+    branches-ignore:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      -
+        uses: actions/checkout@v2
+      -
+        name: "Set up JDK 11 "
+        uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: Validate Gradle wrapper
+          distribution: adopt
+          java-version: "11"
+      -
+        name: "Validate Gradle wrapper"
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      -
+        name: "Build with Gradle"
+        run: "./gradlew bake"
+      -
+        name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
-          arguments: build
+          BRANCH: gh-pages
+          FOLDER: build
+#          GITHUB_TOKEN: "${{secrets.GITHUB_TOKEN}}"
