--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -1,4 +1,4 @@
-name: Jbake-WorkFlow
+name: Java CI
 on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
@@ -24,11 +24,4 @@ jobs:
         run: chmod +x ./gradlew
       -
         name: "Build with Gradle"
-        run: "./gradlew bake"
-      -
-        name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.7
-        with:
-          BRANCH: gh-pages
-          FOLDER: build
-#          GITHUB_TOKEN: "${{secrets.GITHUB_TOKEN}}"
+        run: "./gradlew build"
